# pakr

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: reference.yaml
doc/: development.md
libbackend/: Cargo.toml
libbackend/src/: config.rs  lib.rs  logging.rs  server.rs
src/: config.rs  lib.rs  main.rs
