[package]
name = "pakr"
version = "0.1.0"
authors = ["Michal Turek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./",
    "libbackend",
]

[dependencies]
failure = "~0.1"
libbackend = { path = "libbackend" }
log = "~0.4"
